--- a/components/SheardComponents/Footer/Footer.css
+++ b/components/SheardComponents/Footer/Footer.css
@@ -27,3 +27,9 @@
     top: 0;
     right: 0;
 } */
+@media only screen and (max-width: 1024px){
+    .footerLogoDiv{
+        width: 22vw;
+        height: 5vh;
+    }
+}
