--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,6 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
-
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -15,10 +14,10 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
 body {
-  /* color: rgb(var(--foreground-rgb)); */
+  background-color: white;
 }
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -139,7 +138,6 @@ body {
 .arrivalCategoryText{
   color: #666666;
 }
-
 
 /* media */
 @media only screen and (max-width: 1024px){
